--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
     "expo": "~44.0.0",
+    "expo-google-app-auth": "~8.3.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
+    "firebase": "^9.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
